Update CTA section background to use a specific image for enhanced visual appeal

--- a/index.html
+++ b/index.html
@@ -611,10 +611,14 @@
             font-size: 0.75rem;
         }
 
-        /* CTA Section */
+        /* CTA Section - SEA BEYOND with specific background */
         .cta-section {
-            /* Translucent overlay so the global fixed background remains visible */
-            background: linear-gradient(180deg, rgba(0,0,0,0.25), rgba(0,0,0,0.35));
+            /* Use specific background image for this section only */
+            background-image: url('assets/AdobeStock_951313034.png');
+            background-size: cover;
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             height: 749px;
             display: flex;
             align-items: center;
