Update background gradients for features, app, and stories sections to align with design specifications

--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
 
         /* Features Section */
         .features-section {
-            /* keep translucent so the fixed background shows through */
-            background: linear-gradient(180deg, rgba(21, 40, 64, 0.75) 0%, rgba(26, 53, 80, 0.7) 100%);
+            /* Use the blue gradient colors from the design */
+            background: linear-gradient(135deg, #000311 0%, #002B4D 100%);
             min-height: 100vh;
             padding: 8rem 5%;
             display: flex;
@@ -376,7 +376,7 @@
 
         /* App Section */
         .app-section {
-            background: linear-gradient(135deg, rgba(5, 15, 30, 0.8) 0%, rgba(10, 25, 45, 0.75) 100%);
+            background: linear-gradient(135deg, #000311 0%, #002B4D 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -387,7 +387,7 @@
 
         /* Ensure same background for stories section */
         .stories-section {
-            background: linear-gradient(135deg, rgba(5, 15, 30, 0.8) 0%, rgba(10, 25, 45, 0.75) 100%) !important;
+            background: linear-gradient(135deg, #000311 0%, #002B4D 100%) !important;
             padding: 6rem 5%;
             position: relative;
             z-index: 20;
@@ -487,7 +487,7 @@
 
         /* Stories Section */
         .stories-section {
-            background: linear-gradient(135deg, rgba(5, 15, 30, 0.95) 0%, rgba(10, 25, 45, 0.95) 100%);
+            background: linear-gradient(135deg, #000311 0%, #002B4D 100%);
             padding: 6rem 5%;
             position: relative;
             z-index: 20;
